# tarmunger

./: .gitignore  Pipfile  README.md  SECURITY.MD  make_test_tar.sh  pyproject.toml  tarmunger.py
.github/workflows/: pylint.yml
tarmunger/: __init__.py  __main__.py
tests/: test_stripped_filename.py
