[tool.poetry]
name = "tarmunger"
version = "0.0.2"
description = "Mangling tarfiles since 20something"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
loguru = "^0.6.0"
prompt-toolkit = "^3.0.32"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tarmunger = "tarmunger:cli"

[tool.pylint.MASTER]
max-line-length=200
